maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:59: error: '}' expected but 'case' found.
      case 1 =>  while (!isWallAtLeft()) { 
      ^PledgeMaze:69: error: expected start of definition
override def run() { 
         ^PledgeMaze:73: error: eof expected but '}' found.
}
^